force-app/main/default/objects/Client__c/fields/Property_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Property_Interested_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which property is the client interested in?</description>
    <label>Property Interested In?</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>