force-app/main/default/objects/Client__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Phone__c</columns>
    <columns>Property_Interested_In__c</columns>
    <columns>Client_Status__c</columns>
    <columns>Client_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>